--- a/demo/project.config.json
+++ b/demo/project.config.json
@@ -60,6 +60,14 @@
 					"id": -1,
 					"name": "分类",
 					"pathName": "pages/category/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "商品类表",
+					"pathName": "pages/goods_list/index",
+					"query": "cid=5",
 					"scene": null
 				}
 			]
