--- a/demo/project.config.json
+++ b/demo/project.config.json
@@ -69,6 +69,13 @@
 					"pathName": "pages/goods_list/index",
 					"query": "cid=5",
 					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "商品详情",
+					"pathName": "pages/goos_detail/index",
+					"query": "goods_id=43986",
+					"scene": null
 				}
 			]
 		}
